@@ -9,6 +9,13 @@
  https://github.com/suzukiiichiro/N-Queen 
  			
 
+コンパイル
+javac -cp .:commons-lang3-3.4.jar NQueen.java ;
+
+実行
+java  -cp .:commons-lang3-3.4.jar: -server -Xms4G -Xmx8G -XX:-HeapDumpOnOutOfMemoryError -XX:NewSize=256m -XX:MaxNewSize=256m -XX:-UseAdaptiveSizePolicy -XX:+UseConcMarkSweepGC NQueen  ;
+
+
 
 *************************
 はじめに
